feat: introduce Rishi AI advisor, comprehensive coding telemetry, external platform integrations, and a multi-language compiler with new Battle Station and Duel Arena UIs.